--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <title>DishDynamo</title>
   </head>
   <body>
+    <div style="display: flex; justify-content: center;">
+      <div id="google_translate_element"></div>
+    </div>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 
@@ -26,7 +30,7 @@
       chatbox.setAttribute("attribution", "biz_inbox");
     </script>
 
-    <!-- Your SDK code -->
+    <!-- Fb SDK code -->
     <script>
       window.fbAsyncInit = function() {
         FB.init({
@@ -45,5 +49,20 @@
         fjs.parentNode.insertBefore(js, fjs);
       })(document, "script", "facebook-jssdk");
     </script>
+
+    <!-- google translator api  -->
+    <script src="script.js"></script>
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+          { pageLanguage: "en" },
+          "google_translate_element"
+        );
+      }
+    </script>
+    <script
+      type="text/javascript"
+      src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+    ></script>
   </body>
 </html>
