--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </script>
 
     <!-- google translator api  -->
-    <script src="script.js"></script>
+    <!--  <script src="script.js"></script>
     <script type="text/javascript">
       function googleTranslateElementInit() {
         new google.translate.TranslateElement(
@@ -63,6 +63,6 @@
     <script
       type="text/javascript"
       src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
-    ></script>
+    ></script> -->
   </body>
 </html>
